# argos3-pipuck

./: README.md
src/: CMakeLists.txt
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake
src/plugins/: CMakeLists.txt
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/pi-puck/: CMakeLists.txt
src/plugins/robots/pi-puck/hardware/: actuator.h  main.cpp  pipuck_camera_system_default_sensor.h  pipuck_differential_drive_default_actuator.cpp  pipuck_differential_drive_default_actuator.h  pipuck_differential_drive_default_sensor.cpp  pipuck_differential_drive_default_sensor.h  pipuck_front_camera_default_sensor.cpp  pipuck_front_camera_default_sensor.h  pipuck_ground_default_sensor.cpp  pipuck_ground_default_sensor.h  pipuck_leds_default_actuator.cpp  pipuck_leds_default_actuator.h  pipuck_rangefinders_default_sensor.cpp  pipuck_rangefinders_default_sensor.h  pipuck_system_default_sensor.h  radios_default_actuator.cpp  radios_default_actuator.h  radios_default_sensor.cpp  radios_default_sensor.h  robot.cpp  robot.h  sensor.h  simple_radios_default_actuator.cpp  simple_radios_default_actuator.h  simple_radios_default_sensor.cpp  simple_radios_default_sensor.h
src/testing/: CMakeLists.txt  test_cameras.argos.in  test_cameras.lua  test_differential_drive.lua  test_front_camera.argos.in  test_front_camera.lua  test_system.lua
